[package]
name = "bidix-tools"
version = "0.0.1"
authors = ["Vee Satayamas <vsatayamas@gmail.com>"]
description = "Apertium bilingual dictionary reader"
license = "GPL-3.0"

[[bin]]
name = "bidix_to_bin"
path = "src/bidix_to_bin.rs"

[[bin]]
name = "list_surface"
path = "src/list_surface.rs"


[dependencies]
xml-rs = "0.2"
clap = { version = "1", features = ["yaml"] }
bincode = "0.4"
rustc-serialize = "0.3"
